2018-08-31  David Kilzer  <ddkilzer@apple.com>

        REGRESSION (r235190): Fix name of WebAudioBufferList.{cpp,h} in Xcode project

        * WebCore.xcodeproj/project.pbxproj:
        - Add the 'name' parameter to the file references, then fix the
          visual name everywhere else, so these files don't appear as
          "cocoa/WebAudioBufferList.{cpp,h}" in the project.

2018-08-31  Frederic Wang  <fwang@igalia.com>

        Bug 182053 - [CSSOM View] Implement standard behavior for scrollingElement
        https://bugs.webkit.org/show_bug.cgi?id=182053

        Reviewed by Simon Fraser.

        This commit introduces a new CSSOMViewScrollingAPIEnabled flag that will be used to implement
        the standard behavior of DOM scroll* API as specified by the CSSOM View spec (see bug 5991).
        It changes the behavior of document.scrollingElement so that it follows the spec when the
        flag is enabled. This will allow to pass the WPT test cssom-view/scrollingElement.html when
        it becomes the default behavior. WPT tests cssom-view/scrollingElement-quirks-dynamic*.html
        still fail; comparing with Chromium's code, we might need to propagate the style of <html>
        and <body> to the viewport element. Behaviors for other scrolling attributes will be changed
        in follow-up bugs.

        Tests: fast/dom/Document/scrollingElement-quirks-mode.html
               fast/dom/Document/scrollingElement-standard-mode.html

        * dom/Document.cpp:
        (WebCore::Document::isBodyPotentiallyScrollable): Helper function to verify whether the body
        is potentially scrollable, as defined by the CSSOM View spec. It seems that
        RenderObject::hasOverflowClip() may return incorrect value at this point and we might need
        to do something similar to Chromium's style propagation to make it work. For now, we just
        use the computed style. See bug 182292.