@@ -1,3 +1,15 @@
+2018-08-31  Philippe Normand  <philn@igalia.com>
+
+        [GStreamer][GL] useless ifdef in pushTextureToCompositor
+        https://bugs.webkit.org/show_bug.cgi?id=188552
+
+        Reviewed by Xabier Rodriguez-Calvar.
+
+        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
+        (WebCore::MediaPlayerPrivateGStreamerBase::pushTextureToCompositor):
+        There's no need for an ifdef because the frame holder already
+        ensures a valid texture ID will be set if it maps a GL video frame.
+
 2018-08-31  David Kilzer  <ddkilzer@apple.com>
 
         REGRESSION (r235190): Fix name of WebAudioBufferList.{cpp,h} in Xcode project
